--- a/llog/gui/main_window.glade
+++ b/llog/gui/main_window.glade
@@ -176,7 +176,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
-                      <object class="GtkImageMenuItem">
+                      <object class="GtkImageMenuItem" id="about_menu">
                         <property name="label">gtk-about</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
@@ -523,6 +523,7 @@
                   <object class="GtkEntry" id="txextra_entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="text" translatable="yes">73s and DX</property>
                     <signal name="changed" handler="on_window_main_entry_changed" swapped="no"/>
                   </object>
                   <packing>
@@ -558,7 +559,6 @@
                   <object class="GtkEntry" id="comment_entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="placeholder_text" translatable="yes">73s and DX</property>
                     <signal name="changed" handler="on_window_main_entry_changed" swapped="no"/>
                   </object>
                   <packing>
